force-app/main/default/objects/PortfolioManager__c/PortfolioManager__c.object-meta.xml
<CustomObject>
    <label>Gerenciador de Portfólio</label>
    <nameField>
        <displayFormat>GP-{000000}</displayFormat>
        <label>Nome de Gerenciador de Portfólio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gerenciador de Portfólios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>