force-app/main/default/objects/PortfolioManager__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gerenciador de Portfólios</relationshipLabel>
    <relationshipName>PortfolioManagers</relationshipName>
    <type>Lookup</type>
</CustomField>