force-app/main/default/objects/PortfolioManager__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Gerenciador de Portfólios</relationshipLabel>
    <relationshipName>PortfolioManagers</relationshipName>
    <type>Lookup</type>
</CustomField>