force-app/main/default/objects/PortfolioManager__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>Data de fechamento</label>
    <type>DateTime</type>
</CustomField>