force-app/main/default/objects/PortfolioManager__c/fields/HefestoValidatedAt__c.field-meta.xml
<CustomField>
    <fullName>HefestoValidatedAt__c</fullName>
    <label>Hefesto validou em</label>
    <type>DateTime</type>
</CustomField>