force-app/main/default/objects/PortfolioManager__c/fields/HefestoValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>HefestoValidationStatus__c</fullName>
    <description>Utilizado para confirmar se Usuário atribuido pelo Omni-Channel já foi validado pelo Hefesto</description>
    <label>Status de validação do Hefesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>CONFIRMED</fullName>
                <label>Confirmado</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>Erro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>