force-app/main/default/objects/PortfolioManager__c/fields/IntegrationJob__c.field-meta.xml
<CustomField>
    <fullName>IntegrationJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trabalho da Integração</label>
    <referenceTo>IntegrationJob__c</referenceTo>
    <relationshipLabel>Gerenciador de Portfólios</relationshipLabel>
    <relationshipName>PortfolioManagers</relationshipName>
    <type>Lookup</type>
</CustomField>