force-app/main/default/objects/PortfolioManager__c/fields/PortfolioRequest__c.field-meta.xml
<CustomField>
    <fullName>PortfolioRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitação de portfólio</label>
    <referenceTo>PortfolioManager__c</referenceTo>
    <relationshipLabel>Solicitações de portfólio</relationshipLabel>
    <relationshipName>PortfolioRequests</relationshipName>
    <type>Lookup</type>
</CustomField>