force-app/main/default/objects/PortfolioManager__c/fields/PreselectedAt__c.field-meta.xml
<CustomField>
    <fullName>PreselectedAt__c</fullName>
    <description>Horário que o agente foi pré-selecionado pelo Omni-Channel</description>
    <label>Pré-selecionado em</label>
    <type>DateTime</type>
</CustomField>