force-app/main/default/objects/PortfolioManager__c/fields/RoutingId__c.field-meta.xml
<CustomField>
    <fullName>RoutingId__c</fullName>
    <label>Id do roteamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>