force-app/main/default/objects/PortfolioManager__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data de inicio</label>
    <type>DateTime</type>
</CustomField>