force-app/main/default/objects/PortfolioManager__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
                <label>Inativo</label>
            </value>
            <value>
                <fullName>TRANSFERRED</fullName>
                <label>Transferido</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>Erro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>