force-app/main/default/objects/PortfolioManager__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSIGNED</fullName>
                <label>Encarteiramento</label>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
                <label>Transferência</label>
            </value>
            <value>
                <fullName>UNASSIGNED</fullName>
                <label>Desencarteiramento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>