force-app/main/default/objects/PortfolioManager__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trabalhador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PortfolioManagers</relationshipName>
    <type>Lookup</type>
</CustomField>