force-app/main/default/objects/PortfolioManager__c/fields/WorkerPortfolio__c.field-meta.xml
<CustomField>
    <fullName>WorkerPortfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfólio do trabalhador</label>
    <referenceTo>PortfolioManager__c</referenceTo>
    <relationshipLabel>Unidades de portfólio</relationshipLabel>
    <relationshipName>PortfolioUnits</relationshipName>
    <type>Lookup</type>
</CustomField>