force-app/main/default/objects/PortfolioManager__c/recordTypes/LinkPortfolioWorkerAndRequest.recordType-meta.xml
<RecordType>
    <fullName>LinkPortfolioWorkerAndRequest</fullName>
    <active>true</active>
    <label>Link trabalhador e solicitação</label>
</RecordType>