force-app/main/default/objects/PortfolioManager__c/recordTypes/PortfolioRequest.recordType-meta.xml
<RecordType>
    <fullName>PortfolioRequest</fullName>
    <active>true</active>
    <label>Solicitação de portfólio</label>
</RecordType>