force-app/main/default/objects/PortfolioManager__c/recordTypes/WorkerPortfolio.recordType-meta.xml
<RecordType>
    <fullName>WorkerPortfolio</fullName>
    <active>true</active>
    <label>Portfólio do trabalhador</label>
</RecordType>