force-app/main/default/objects/PortfolioManager__c/recordTypes/WorkerPortfolioUnit.recordType-meta.xml
<RecordType>
    <fullName>WorkerPortfolioUnit</fullName>
    <active>true</active>
    <label>Unidade de Portfólio de Trabalho</label>
</RecordType>